--- a/portfolio.html
+++ b/portfolio.html
@@ -258,6 +258,21 @@
                     </li>
                 </ul>
             </div>
+            <!-- Підписатися на розсилку -->
+            <div class="footer-sub">
+                <h2 class="join-title">Підпишіться на розсилку</h2>
+                <form name="sub-form">
+                    <div class="sub-container">
+                        <label class="sub-label">
+                            <input class="sub-input" type="email" placeholder="E-mail" name="subscribe-email">
+                        </label>
+                        <button class="sub-submit" type="submit">Підписатися
+                            <svg class="sub-icon" width="24" height="24">
+                                <use href="./images/symbol-defs.svg#icon-icon-send"></use>
+                            </svg></button>
+                    </div>
+                </form>
+            </div>
         </div>
     </footer>
     <script src="./js/modal.js"></script>
