перевіріла ховер та кубик

--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
       
     <!-- Форма вікна -->
     <form class="feedback-form" name="feedback-form">
-      <div>
+      <div class="">
         <h2 class="feedback-title">Залиште свої дані, ми вам передзвонимо</h2>
         <ul class="feedback-list list">
           <li class="feedback-item">
