--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <!-- Шапка -->
-    <header class="header">
+    <header class="header-studio">
       <div class="header-container container">
         <nav class="header-nav">
         <div class="logo-item"><a href="./index.html" lang="en" class="logo">Web<span class="accent">Studio</span></a></div>
