змінила розмітку у модалці

--- a/index.html
+++ b/index.html
@@ -419,12 +419,12 @@
       
     <!-- Форма вікна -->
     <form class="feedback-form" name="feedback-form">
+              <strong class="feedback-title">Залиште свої дані, ми вам передзвонимо</strong>
       <div class="">
-        <h2 class="feedback-title">Залиште свої дані, ми вам передзвонимо</h2>
         <ul class="feedback-list list">
           <li class="feedback-item">
             <label class="feedback-lable">
-              <p class="feedback-text">Ім'я</p>
+              <span class="feedback-text">Ім'я</span>
               <input class="feedback-input" type="text" name="feedback-name">
               <svg class="feedback-icon" width="18" height="18">
                 <use href="./images/symbol-defs.svg#icon-person-black"></use>
@@ -433,7 +433,7 @@
           </li>
           <li class="feedback-item">
             <label class="feedback-lable">
-              <p class="feedback-text">Телефон</p>
+              <span class="feedback-text">Телефон</span>
               <input class="feedback-input" type="tel" name="feedback-tel">
               <svg class="feedback-icon" width="18" height="18">
                 <use href="./images/symbol-defs.svg#icon-phone-black"></use>
@@ -442,7 +442,7 @@
           </li>
           <li class="feedback-item">
             <label class="feedback-lable">
-              <p class="feedback-text">Пошта</p>
+              <span class="feedback-text">Пошта</span>
               <input class="feedback-input" type="email" name="feedback-email">
               <svg class="feedback-icon" width="18" height="18">
                 <use href="./images/symbol-defs.svg#icon-email"></use>
@@ -451,7 +451,7 @@
           </li>
           <li class="feedback-item">
             <label>
-              <p class="feedback-text">Коментар</p>
+              <span class="feedback-text">Коментар</span>
               <textarea class="feedback-textarea feedback-input" name="feedback-comment" rows="10"
                 placeholder="Введіть текст"></textarea>
             </label>
